added background image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
     <title>Fair Weather Hiking</title>
   </head>
   <body>
